@@ -10,6 +10,7 @@ Fail2Ban (version 0.7.3)                           2006/??/??
 ver. 0.7.3 (2006/??/??) - beta
 ----------
 - Added man pages. Thanks to Yaroslav Halchenko
+- Added wildcard support for "logpath"
 
 ver. 0.7.2 (2006/09/10) - beta
 ----------
